--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -12,5 +12,20 @@
         android:layout_height="match_parent"
         tools:context=".ui.categories.CategoryFragment">
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="@string/categories"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/app_red"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
