--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -74,6 +74,9 @@
             android:name="sku"
             app:argType="string"
             app:nullable="true" />
+        <argument
+            android:name="catalogId"
+            app:argType="long" />
     </fragment>
     <fragment
         android:id="@+id/ordersFragment"
